@@ -5,6 +5,7 @@ import lombok.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ArticleResponseDTO {
     @Getter
@@ -31,6 +32,8 @@ public class ArticleResponseDTO {
         private String content;
         private LocalDateTime createdAt;
         private LocalDateTime updatedAt;
+
+
         public static ArticlePreviewDTO from(Article article) {
             return ArticlePreviewDTO.builder()
                     .id(article.getId())
@@ -45,11 +48,16 @@ public class ArticleResponseDTO {
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
     @NoArgsConstructor(access = AccessLevel.PROTECTED)
     @Builder
-    public static class ArticlePreviewListDTO { //게시물 전체 조회 DTO
+    public static class ArticlePreviewListDTO { // 게시물 전체 조회 DTO
         private List<ArticlePreviewDTO> articles;
-        public static ArticlePreviewListDTO from(List<Article> articles) {
+        private boolean hasNext; // 다음 페이지 여부
+        private boolean hasPrevious; // 이전 페이지 여부
+
+        public static ArticlePreviewListDTO from(List<Article> articles, boolean hasNext, boolean hasPrevious) {
             return ArticlePreviewListDTO.builder()
-                    .articles(articles.stream().map(ArticlePreviewDTO::from).toList())
+                    .articles(articles.stream().map(ArticlePreviewDTO::from).collect(Collectors.toList()))
+                    .hasNext(hasNext)
+                    .hasPrevious(hasPrevious)
                     .build();
         }
     }
